# ASCII-Lofi

./: .gitignore  CMakeLists.txt  README.md  asciiLofi.h  danlive.webm.REMOVED.git-id  fileBrowser.cpp  lofiAscii  lofiAscii.out  main.cpp  makefile  video.cpp
src/: MultimediaPlayer.cpp  MultimediaPlayer.hpp  asciiLofi.h  asciiLofi.hpp  fileBrowser.cpp  main.cpp  mainmenu.cpp  mainmenu.hpp  sound.cpp  video.cpp
