cmake_minimum_required(VERSION 3.15)
project(lofiAscii)

set(CMAKE_CXX_STANDARD 17)
find_package(OpenCV REQUIRED)
find_package(Curses REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(lofiAscii src/main.cpp src/video.cpp src/fileBrowser.cpp)
target_link_libraries(lofiAscii ${OpenCV_LIBS})
target_link_libraries(lofiAscii ${CURSES_LIBRARIES})