cmake_minimum_required(VERSION 3.15)
project(lofiAscii)

set(CMAKE_CXX_STANDARD 23)
find_package(OpenCV REQUIRED)
find_package(Curses REQUIRED)
find_package(fmt REQUIRED)
#find_package(qt6_base REQUIRED)
#find_package(VTK REQUIRED)
#find_package(hdf5)
include_directories(${CURSES_INCLUDE_DIR})
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(${fmt_INCLUDE_DIRS})
#include_directories(${vtk_INCLUDE_DIRS})
#include_directories(${qt6_base_INCLUDE_DIRS})
#include_directories(${hdf5_INCLUDE_DIRS})
add_executable(lofiAscii src/main.cpp src/video.cpp src/fileBrowser.cpp src/MultimediaPlayer.cpp src/sound.cpp)
target_link_libraries(lofiAscii ${OpenCV_LIBS})
target_link_libraries(lofiAscii ${CURSES_LIBRARIES})
#target_link_libraries(lofiAscii ${VTK_LIBRARIES})
#target_link_libraries(lofiAscii ${qt6_base_LIBRARIES})
#target_link_libraries(lofiAscii ${hdf5_LIBRARIES})
target_link_libraries(lofiAscii fmt::fmt)
