cmake_minimum_required(VERSION 3.15)
project(lofiAscii)

set(CMAKE_CXX_STANDARD 23)
find_package(Curses REQUIRED)
find_package(fmt REQUIRED)
include_directories(${CURSES_INCLUDE_DIR})
include_directories(${fmt_INCLUDE_DIRS})
#add_executable(lofiAscii src/main.cpp src/video.cpp src/fileBrowser.cpp src/MultimediaPlayer.cpp src/sound.cpp)
add_executable(lofiAscii src/mainmenu.cpp)
target_link_libraries(lofiAscii ${CURSES_LIBRARIES})
target_link_libraries(lofiAscii fmt::fmt)
